--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -28,4 +28,5 @@
     <color name="warm_grey">#707070</color>
     <color name="warm_grey_two">#777777</color>
     <color name="grey">#f1f1f1</color>
+    <color name="blue">#1883e1</color>
 </resources>
