--- a/app/src/main/res/layout/row_item_order_history_detail.xml
+++ b/app/src/main/res/layout/row_item_order_history_detail.xml
@@ -9,7 +9,7 @@
         android:id="@+id/image_view_order_history_detail"
         android:layout_width="@dimen/dp73"
         android:layout_height="@dimen/dp73"
-        android:src="@mipmap/ic_launcher"
+        android:src="@mipmap/ic_shoes"
         app:riv_corner_radius="@dimen/dp4" />
 
     <LinearLayout
@@ -22,6 +22,7 @@
             android:id="@+id/text_view_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:maxLines="1"
             android:text="Nike Air Force Jester"
             android:textColor="@color/brownish_grey"
             android:textSize="@dimen/sp12"
