--- a/app/src/main/res/layout/activity_order_history.xml
+++ b/app/src/main/res/layout/activity_order_history.xml
@@ -8,36 +8,74 @@
     android:orientation="vertical"
     tools:context=".activity.OrderHistoryActivity">
 
-    <LinearLayout
+    <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="@dimen/dp60"
-        android:background="@color/white"
-        android:gravity="center_vertical">
+        android:layout_height="wrap_content">
 
         <LinearLayout
-            android:id="@+id/linear_layout_back"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dp60"
+                android:background="@color/white"
+                android:gravity="center_vertical">
+
+                <LinearLayout
+                    android:id="@+id/linear_layout_back"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="@dimen/dp10">
+
+                    <ImageView
+                        android:layout_width="@dimen/dp25"
+                        android:layout_height="@dimen/dp25"
+                        android:src="@mipmap/ic_back" />
+                </LinearLayout>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="@dimen/dp16"
+                    android:text="Lịch sử đơn hàng"
+                    android:textColor="@color/black"
+                    android:textSize="@dimen/sp18" />
+            </LinearLayout>
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/recycler_view_order_history"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:visibility="visible"></android.support.v7.widget.RecyclerView>
+
+        </LinearLayout>
+    </android.support.v4.widget.NestedScrollView>
+
+    <LinearLayout
+        android:id="@+id/linear_layout_empty_order_history"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="@dimen/dp20"
+        android:background="@color/white"
+        android:orientation="vertical"
+        android:paddingTop="@dimen/dp100"
+        android:visibility="gone">
+
+        <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:padding="@dimen/dp10">
-
-            <ImageView
-                android:layout_width="@dimen/dp25"
-                android:layout_height="@dimen/dp25"
-                android:src="@mipmap/ic_back" />
-        </LinearLayout>
+            android:layout_gravity="center"
+            android:src="@mipmap/ic_empty_bag" />
 
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/dp16"
-            android:text="Lịch sử đơn hàng"
-            android:textColor="@color/black"
-            android:textSize="@dimen/sp18" />
+            android:layout_marginTop="@dimen/dp20"
+            android:gravity="center"
+            android:text="Bạn chưa có đơn hàng nào trong lịch sử"
+            android:textColor="@color/brownish_grey"
+            android:textSize="@dimen/sp14" />
     </LinearLayout>
-
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/recycler_view_order_history"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>
-
 </LinearLayout>
