[GroupAssignment] fix bugs

--- a/app/src/main/res/layout/row_item_order_history.xml
+++ b/app/src/main/res/layout/row_item_order_history.xml
@@ -31,7 +31,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Order ID #12321412"
-                    android:textColor="@color/grey2"
+                    android:textColor="@color/black"
                     android:textSize="@dimen/sp11" />
 
             </LinearLayout>
@@ -70,32 +70,32 @@
         </LinearLayout>
     </LinearLayout>
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/dp1"
-        android:layout_marginTop="@dimen/dp7"
-        android:layout_marginBottom="@dimen/dp19"
-        android:alpha="0.16"
-        android:background="@color/warm_grey"></View>
+    <!--<View-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="@dimen/dp1"-->
+    <!--android:layout_marginTop="@dimen/dp7"-->
+    <!--android:layout_marginBottom="@dimen/dp19"-->
+    <!--android:alpha="0.16"-->
+    <!--android:background="@color/warm_grey"></View>-->
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
-        <FrameLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
+        <!--<FrameLayout-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:orientation="horizontal">-->
 
-            <com.makeramen.roundedimageview.RoundedImageView
-                android:id="@+id/image_view_order_detail"
-                android:layout_width="@dimen/dp73"
-                android:layout_height="@dimen/dp73"
-                android:src="@mipmap/ic_shoes"
-                app:riv_corner_radius="@dimen/dp20" />
+        <!--<com.makeramen.roundedimageview.RoundedImageView-->
+        <!--android:id="@+id/image_view_order_detail"-->
+        <!--android:layout_width="@dimen/dp73"-->
+        <!--android:layout_height="@dimen/dp73"-->
+        <!--android:src="@mipmap/ic_shoes"-->
+        <!--app:riv_corner_radius="@dimen/dp20" />-->
 
-        </FrameLayout>
+        <!--</FrameLayout>-->
 
         <LinearLayout
             android:layout_width="@dimen/dp200"
@@ -104,25 +104,25 @@
             android:layout_marginLeft="@dimen/dp13"
             android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/text_view_order_detail_name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Bath bomb Glo AROMA"
-                android:textColor="@color/brownish_grey"
-                android:textSize="@dimen/sp13"
-                android:maxLines="1"
-                android:textStyle="bold" />
+            <!--<TextView-->
+            <!--android:id="@+id/text_view_order_detail_name"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:text="Bath bomb Glo AROMA"-->
+            <!--android:textColor="@color/brownish_grey"-->
+            <!--android:textSize="@dimen/sp13"-->
+            <!--android:maxLines="1"-->
+            <!--android:textStyle="bold" />-->
 
-            <TextView
-                android:id="@+id/text_view_order_detail_price"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/dp3"
-                android:layout_marginBottom="@dimen/dp3"
-                android:text="350.000đ x 1"
-                android:textColor="@color/brownish_grey"
-                android:textSize="@dimen/sp13" />
+            <!--<TextView-->
+            <!--android:id="@+id/text_view_order_detail_price"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_marginTop="@dimen/dp3"-->
+            <!--android:layout_marginBottom="@dimen/dp3"-->
+            <!--android:text="350.000đ x 1"-->
+            <!--android:textColor="@color/brownish_grey"-->
+            <!--android:textSize="@dimen/sp13" />-->
 
             <TextView
                 android:id="@+id/text_view_order_status"
@@ -142,7 +142,8 @@
                 android:id="@+id/linear_layout_view_detail"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@drawable/background_order_history_view_detail">
+                android:background="@drawable/background_order_history_view_detail"
+                android:visibility="gone">
 
                 <TextView
                     android:layout_width="wrap_content"
