--- a/app/src/main/res/layout/activity_order_success.xml
+++ b/app/src/main/res/layout/activity_order_success.xml
@@ -59,11 +59,11 @@
             android:layout_height="@dimen/dp48"
             android:layout_gravity="center"
             android:layout_marginTop="@dimen/dp8"
-            android:background="@drawable/button_add_to_cart"
+            android:background="@drawable/button_login"
             android:text="Xem lại đơn hàng"
-            android:textColor="@color/white"
+            android:textColor="@color/black"
             android:textSize="@dimen/sp14"
-            android:visibility="gone" />
+            android:visibility="visible" />
 
         <TextView
             android:id="@+id/text_view_back_home_page"
