--- a/app/src/main/res/layout/activity_edit_order_detail.xml
+++ b/app/src/main/res/layout/activity_edit_order_detail.xml
@@ -97,7 +97,8 @@
 
                         <TextView
                             android:id="@+id/text_view_product_name"
-                            android:layout_width="wrap_content"
+                            android:layout_width="@dimen/dp172"
+                            android:maxLines="1"
                             android:layout_height="wrap_content"
                             android:text="Air Jordan 11 Win Like 96"
                             android:textColor="@color/black_two"
